Changes for 4.0.6rc1

New features:
.......PS. [ZBXNEXT-5037] added 'skip' parameter for vmware.eventlog key (MVekslers)
..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)

Bug fixes:
...G...... [ZBX-15607] fixed possibility of zombie processes occurring when signaling agent during metric execution (akozlovs)
.D........ [ZBX-10496] fixed links to installation instructions in README file (dimir)
..F....... [ZBX-15625] removed links leading to media type edit form for non-superadmins in Reports->Notifications page (Ivo)
.......PS. [ZBX-15703] fixed use of uninitialized variable when receiving 0 bytes on listening socket (akozlovs)
..F....... [ZBX-15537] fixed visual bug when filter tab was overlapped by sub navigation (gcalenko)
..F....... [ZBX-15539] fixed validation of master item in item update form (miks)
..F....... [ZBX-15532] fixed undefined index error on problems page when trigger expression contains web items (gcalenko, Sasha)
A......... [ZBX-15488] fixed permission check for inherited triggers (miks)
..F....... [ZBX-15646] fixed web-server 'Request-URI Too Long' error in trigger description dialog (miks)

--------------------------------------------------------------------------------
Changes for 4.0.5

4.0.5rc1 was released as 4.0.5 without any changes

--------------------------------------------------------------------------------
Changes for 4.0.5rc1

New features:
..F....... [ZBXNEXT-5046] added non-destructive resizing and reordering of dashboard widgets (ashubin, gcalenko, miks)
..FGI..PST [ZBXNEXT-401,ZBXNEXT-4907,ZBXNEXT-4955] added monitoring of internal metrics from an external Zabbix instance (vasilijs, viktors)

Bug fixes:
.......PS. [ZBXNEXT-4941] changed overflow statements to execute one by one for Oracle for better performance (kalimulin)
..F....... [ZBX-15664] fixed "Undefined index" errors on maps with enabled automatic icon mapping (Sasha)