@@ -1,6 +1,7 @@
 Changes for 4.0.6rc1
 
 New features:
+...G...... [ZBXNEXT-4898] added support IPv6 for 'net.dns' and 'net.dns.record' (MVekslers)
 .......PS. [ZBXNEXT-5037] added 'skip' parameter for vmware.eventlog key (MVekslers)
 ..F....... [ZBXNEXT-4819] implemented date and time showing in SVG graph widget (miks)
 
